Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_bytesabroad.yml
+++ b/.github/workflows/main_bytesabroad.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - BytesAbroad
+name: Build and deploy PHP app to Azure Web App - bytesabroad
 
 on:
   push:
@@ -54,7 +54,7 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'BytesAbroad'
+          app-name: 'bytesabroad'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C5CD725DA20473CA5862BC5335EC4B1 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2B4FB2A1E6CA4A73BECC96D5D0EDFD1E }}
           package: .
